# touchHLE

./: .clang-format  .gitignore  .gitmodules  ALTERNITIVES.md  APP_SUPPORT.md  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEBUGGING.md  MisteryMania.gdb  OPTIONS_HELP.txt  README.md  build.rs  groups  project.config  tmp-Chucknorris  touchHLE_default_options.txt  touchHLE_options.txt
.cargo/: config.toml
.github/: FUNDING.yml  issue_template.md
.github/ISSUE_TEMPLATE/: app_bug.yml  app_request.yaml  config.yml  general.yml  test-name.md
.github/workflows/: ci.yml  touchHLE_release.yml
android/: BUILDING.md  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/jni/: Application.mk  SDL
android/gradle/wrapper/: gradle-wrapper.properties
dev-docs/: building.md  code-style.md  debugging.md
dev-scripts/: .gitignore  format.sh  lint.sh  log-unimplemented.sh  prepare-release.sh  website-moreinfo.sh
dylibs/: libgcc_s.1.dylib
release-scripts/: .gitignore  prepare-release.sh  website-moreinfo.sh
src/: abi.rs  app_picker.rs  audio.rs  bin.rs  bundle.rs  cpu.rs  debug.rs  dyld.rs  environment.rs  font.rs  frameworks.rs  fs.rs  gdb.rs  gles.rs  image.rs  lib.rs  libc.rs  licenses.rs  log.rs  logg.rs  mach_o.rs  main.rs  matrix.rs  mem.rs  memory.rs  objc.rs  options.rs  paths.rs  stack.rs  window.rs
src/audio/: aac.rs  ima4.rs  openal.rs  symphonia_formats.rs
src/audio/dr_mp3_wrapper/: Cargo.toml  build.rs  lib.c  lib.rs
src/audio/openal_soft_wrapper/: Cargo.toml  build.rs  lib.rs
src/cpu/dynarmic_wrapper/: Cargo.toml  build.rs  lib.cpp  lib.rs
src/dyld/: constant_lists.rs  function_lists.rs
src/environment/: app_picker.rs  mutex.rs  nullable_box.rs
src/frameworks/: audio_toolbox.rs  av_audio.rs  avf_audio.rs  avfaudio.rs  carbon_core.rs  core_animation.rs  core_audio_types.rs  core_foundation.rs  core_graphics.rs  dnssd.rs  foundation.rs  game_kit.rs  mac_types.rs  media_player.rs  openal.rs  opengles.rs  store_kit.rs  system_configuration.rs  uikit.rs
src/frameworks/audio_toolbox/: audio_components.rs  audio_file.rs  audio_queue.rs  audio_services.rs  audio_session.rs  audio_unit.rs
src/frameworks/av_audio/: av_audio_player.rs
src/frameworks/avf_audio/: av_audio_session.rs
src/frameworks/avfaudio/: av_audio_player.rs
src/frameworks/core_animation/: ca_animation.rs  ca_eagl_layer.rs  ca_layer.rs  ca_media_timing_function.rs  composition.rs
src/frameworks/core_foundation/: cf_allocator.rs  cf_array.rs  cf_bundle.rs  cf_data.rs  cf_dictionary.rs  cf_locale.rs  cf_run_loop.rs  cf_run_loop_timer.rs  cf_string.rs  cf_type.rs  cf_url.rs  time.rs
src/frameworks/core_graphics/: cg_affine_transform.rs  cg_bitmap_context.rs  cg_color.rs  cg_color_space.rs  cg_context.rs  cg_data.rs  cg_data_provider.rs  cg_geometry.rs  cg_image.rs
src/frameworks/foundation/: fake_cftimer_target.rs  ns_array.rs  ns_autorelease_pool.rs  ns_bundle.rs  ns_character_set.rs  ns_class.rs  ns_coder.rs  ns_data.rs  ns_date.rs  ns_date_formatter.rs  ns_dictionary.rs  ns_enumerator.rs  ns_error.rs  ns_exception.rs  ns_fast_enumeration.rs  ns_file_handle.rs  ns_file_manager.rs  ns_keyed_unarchiver.rs  ns_locale.rs  ns_lock.rs  ns_log.rs  ns_notification.rs  ns_notification_center.rs  ns_null.rs  ns_objc_runtime.rs  ns_object.rs  ns_operation.rs  ns_process_info.rs  ns_property_list_serialization.rs  ns_range.rs  ns_run_loop.rs  ns_scanner.rs  ns_set.rs  ns_sort_descriptor.rs  ns_string.rs  ns_thread.rs  ns_time_zone.rs  ns_timer.rs  ns_url.rs  ns_url_connection.rs  (+5 more)
src/frameworks/game_kit/: gk_local_player.rs
src/frameworks/media_player/: media_library.rs  media_query.rs  movie_player.rs  music_player.rs
src/frameworks/opengles/: eagl.rs  gles1_native.rs  gles1_on_gl2.rs  gles_generic.rs  gles_guest.rs  util.rs
src/frameworks/store_kit/: sk_payment_queue.rs  sk_product.rs
src/frameworks/system_configuration/: sc_network_reachability.rs
src/frameworks/uikit/: ui_accelerometer.rs  ui_activity_indicator_view.rs  ui_application.rs  ui_color.rs  ui_control.rs  ui_device.rs  ui_event.rs  ui_font.rs  ui_geometry.rs  ui_graphics.rs  ui_image.rs  ui_image_picker_controller.rs  ui_image_view.rs  ui_navigation_controller.rs  ui_nib.rs  ui_responder.rs  ui_screen.rs  ui_text_field.rs  ui_touch.rs  ui_view.rs  ui_view_controller.rs  ui_window.rs
src/fs/: bundle.rs
src/gles/: gles1_native.rs  gles1_on_gl2.rs  gles_generic.rs  present.rs  util.rs
src/gles/gl_bindings/: build.rs  lib.rs
src/image/: stb_image_wrapper.c
src/image/pvrt_decompress_wrapper/: Cargo.toml  build.rs  lib.cpp  lib.rs
src/image/stb_image_wrapper/: Cargo.toml  build.rs  lib.c  lib.rs
src/libc/: clocale.rs  crypto.rs  ctype.rs  cxxabi.rs  dirent.rs  dlfcn.rs  errno.rs  generic_char.rs  ifaddrs.rs  keymgr.rs  mach_host.rs  mach_init.rs  mach_semaphore.rs  mach_thread_info.rs  mach_time.rs  math.rs  mmap.rs  net.rs  netdb.rs  network.rs  posix_io.rs  pthread.rs  sched.rs  semaphore.rs  setjmp.rs  signal.rs  stdio.rs  stdlib.rs  string.rs  sys.rs  sysctl.rs  time.rs  unistd.rs  wchar.rs
src/libc/net/: if_.rs
src/libc/posix_io/: stat.rs
src/libc/pthread/: cond.rs  key.rs  mutex.rs  once.rs  semaphore.rs  thread.rs
src/libc/stdio/: printf.rs
src/mem/: allocator.rs
src/memory/: allocator.rs
src/objc/: classes.rs  messages.rs  methods.rs  objects.rs  properties.rs  protocols.rs  selectors.rs  synchronization.rs
src/window/: gl.rs  matrix.rs
tests/: .gitignore  README.md  crt1.c  integration.rs
tests/ObjCTestApp.app/: Info.plist
tests/ObjCTestApp_source/: SyncTester.h  SyncTester.m  main.m  system_headers.h
tests/TestApp.app/: Info.plist  TestApp
tests/TestApp_source/: CGAffineTransform.c  Info.plist  SyncTester.h  SyncTester.m  crt1.c  main.c  main.m  system_headers.h  system_headers_objc.h
touchHLE_apps/: README.txt
touchHLE_dylibs/: README.md  libgcc_s.1.dylib  libsqlite3.0.8.6.dylib  libstdc++.6.0.4.dylib  libstdc++.6.0.9.dylib  libstdc++.6.dylib  libxml2.2.dylib
touchHLE_fonts/: README.md
(+49 files in other folders)
