# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
[workspace]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
authors = ["hikari_no_yume <hikari@noyu.me>", "Contributors to touchHLE"]
homepage = "https://touchhle.org/"

[package]
name = "touchHLE"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }

[lib]
name="touchHLE"
crate_type=["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
cc = "1.0.77"
cmake = "0.1.49"
gl_generator = "0.14.0"

[dependencies]
caf = "0.1.0"
hound = "3.5.0"
mach_object = "0.1.17"
plist = "1.3.1"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
rusttype = "0.9.3"
# sdl2 crates pinned at 0.35.1 because static linking seems to be broken for
# 0.35.2 on macOS (build errors about undefined symbols for
# _CHHapticDynamicParameterIDHapticIntensityControl etc)
sdl2 = { git = "https://github.com/ciciplusplus/rust-sdl2.git", rev = "c66ca16e42bc6655a9e6eb1c7b0ec41b17c52419", features = ["bundled"] }
# sdl2-sys = "=0.35.1"
touchHLE_dr_mp3_wrapper = { path = "src/audio/dr_mp3_wrapper" }
touchHLE_dynarmic_wrapper = { path = "src/cpu/dynarmic_wrapper" }
touchHLE_gl_bindings = { path = "src/window/gl_bindings" }
touchHLE_openal_soft_wrapper = { path = "src/audio/openal_soft_wrapper" }
touchHLE_stb_image_wrapper = { path = "src/image/stb_image_wrapper" }

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
android_logger = "0.13.1"

[build-dependencies]
cargo-license = "0.5.1"
cc = { workspace = true }
cmake = { workspace = true }
gl_generator = { workspace = true }
