# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.
[workspace]

[workspace.package]
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"
authors = ["hikari_no_yume <hikari@noyu.me>", "Contributors to touchHLE"]
homepage = "https://touchhle.org/"

[package]
name = "touchHLE"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }

[features]
default = ["static"]
static = ["sdl2/bundled", "sdl2/static-link", "touchHLE_openal_soft_wrapper/static", "touchHLE_dynarmic_wrapper/static"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
cc = "1.0.77"
cmake = "0.1.49"
gl_generator = "0.14.0"

[dependencies]
caf = "0.1.0"
hound = "3.5.0"
mach_object = "0.1.17"
plist = "1.3.1"
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
rusttype = "0.9.3"
# The latest release for the rust-sdl2 crate at the time of writing is 0.35.2,
# which is old enough that its bundled SDL2 version is missing various nice
# things, and doesn't build on macOS.
# This is a temporary fork to get a newer SDL2 version.
sdl2 = { git = "https://github.com/hikari-no-yume/rust-sdl2.git", branch = "update-bundled-SDL2", features = ["use-pkgconfig"] }
touchHLE_dr_mp3_wrapper = { path = "src/audio/dr_mp3_wrapper" }
touchHLE_dynarmic_wrapper = { path = "src/cpu/dynarmic_wrapper" }
touchHLE_gl_bindings = { path = "src/window/gl_bindings" }
touchHLE_openal_soft_wrapper = { path = "src/audio/openal_soft_wrapper" }
touchHLE_stb_image_wrapper = { path = "src/image/stb_image_wrapper" }

[build-dependencies]
cargo-license = "0.5.1"
cc = { workspace = true }
cmake = { workspace = true }
gl_generator = { workspace = true }
